--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.indecision">
 
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+<!--    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />-->
 
     <application
         android:allowBackup="true"
@@ -13,6 +13,7 @@
         android:theme="@style/Theme.Indecision">
 
         <activity android:name=".SecondActivity" />
+        <activity android:name=".QuestionFormActivity" />
 
         <activity
             android:name=".MainActivity"
