--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
 
         <activity android:name=".SecondActivity" />
         <activity android:name=".QuestionFormActivity" />
+        <activity android:name=".LoginActivity" />
 
         <activity
             android:name=".MainActivity"
