get firestore data and add to recycler view

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,7 @@
         <activity android:name=".SecondActivity" />
         <activity android:name=".QuestionFormActivity" />
         <activity android:name=".LoginActivity" />
+        <activity android:name=".QuestionListActivity" />
 
         <activity
             android:name=".MainActivity"
