--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
         <activity android:name=".LoginActivity" />
         <activity android:name=".QuestionListActivity" />
         <activity android:name=".EightBallActivity" />
+        <activity android:name=".LogoutActivity" />
 
         <activity
             android:name=".MainActivity"
