--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
         <activity android:name=".QuestionListActivity" />
         <activity android:name=".EightBallActivity" />
         <activity android:name=".LogoutActivity" />
+        <activity android:name=".EditFormActivity"/>
 
         <activity
             android:name=".MainActivity"
